modif index.html par dev21

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html>
 <body>
 
@@ -6,10 +6,10 @@
 
 <form action="/action_page.php">
   First name:<br>
-  <input type="text" name="firstname" value="Mickey">
+  <input type="text" name="firstname" value="toto">
   <br>
   Last name:<br>
-  <input type="text" name="lastname" value="Mouse">
+  <input type="text" name="lastname" value="titi">
   <br><br>
   <input type="submit" value="Submit">
 </form> 
